--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ image: golang:1.8
 stages:
   - test
 
+before_script:
+  - ln -s /builds/psheets /go/src/gitlab.com/psheets
+
 test-my-project:
   stage: test
   script:
